--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,8 @@
 # This is an example .goreleaser.yml file with some sensible defaults.
 # Make sure to check the documentation at https://goreleaser.com
+env:
+  - DOCKER_IMAGE={{ if index .Env "GITHUB_REPOSITORY"  }}{{ .Env.GITHUB_REPOSITORY }}{{ else }}peribolos/peribolos{{ end }}
+project_name: peribolos
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -31,5 +34,10 @@ changelog:
       - '^docs:'
       - '^test:'
 release:
-
   mode: append
+dockers:
+  -
+    image_templates:
+      - "ghcr.io/{{ .Env.DOCKER_IMAGE }}:latest"
+      - "ghcr.io/{{ .Env.DOCKER_IMAGE }}:{{ .Tag }}"
+      - "ghcr.io/{{ .Env.DOCKER_IMAGE }}:v{{ .Major }}"
