chore: change artifact name

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -17,7 +17,8 @@ builds:
     goarch:
       - amd64
 archives:
-  - replacements:
+  - name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
+    replacements:
       darwin: Darwin
       linux: Linux
       windows: Windows
